finish the first sample of this game

--- a/MemoryCardGame/index.html
+++ b/MemoryCardGame/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="cards"></div>
+    <div class="win">
+        <p> You Win </p>
+    </div>
 </body>
 <script src="./app.js"></script>
 </html>
