--- a/Nokia 3310 Snake/index.html
+++ b/Nokia 3310 Snake/index.html
@@ -10,7 +10,7 @@
     <button type="button" id="btn">Start</button>
     <p>Score : <span id="score">0</span></p>
     <div class="score">
-        <p>Score : <span id="score">0</span></p>
+        <p>Score : <span id="score2">0</span></p>
     </div>
     <div class="SnakeBored">
         <div class="cell"></div>
